Added a fetch function to the graph data. we still dont have the graph page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             android:label="@string/StocksList"
             android:theme="@style/Theme.TradingView" />
         <activity
+            android:name=".GraphViewerActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TradingView" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
