--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Mar 24 11:31:42 IST 2024
-sdk.dir=C\:\\Users\\ronsh\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\lior\\AppData\\Local\\Android\\Sdk
